Add sustainability timeline cards and navigation to index.html

--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
 </head>
 <body>
 
+  <!-- Navigation Bar -->
+  <nav>
+    <ul>
+      <li><a href="#timeline">Timeline</a></li>
+      <li><a href="#sustainability">Sustainability Goals</a></li>
+      <li><a href="#contact">Contact Us</a></li>
+    </ul>
+  </nav>
+
   <!-- Header / Hero Section -->
   <header>
     <div>
-      <!-- Ask Copilot to teach you about `.svg` 🙂 -->
       <img src="img/intel-header-logo.svg" alt="Intel Logo" />
-      <!-- Main Heading -->
-      <h1>
-        Sustainability Through the Ages
-      </h1>
-
-      <!-- Subheading / Description -->
+      <h1>Sustainability Through the Ages</h1>
       <p>
         Explore Intel's journey through time, discovering how our commitment
         to innovation has shaped a more sustainable future for technology 
@@ -26,9 +29,17 @@
       </p>
     </div>
   </header>
+  <!-- Additional Image -->
+  <div>
+    <img src="img/intel2.jpg" alt="Intel Image" />
+  </div>
+  <!-- Timeline Section Header -->
+  <div class="timeline-header">
+    <h2>Intel's Sustainability Timeline</h2>
+  </div>
 
   <!-- Timeline Cards Section -->
-  <section>
+  <section id="timeline">
 
     <!-- Card 1: 1968 -->
     <div>
@@ -76,61 +87,61 @@
         personal computers.
       </p>
     </div>
-
+  
     <!-- Card 5: 2006 -->
     <div>
       <h2>2006</h2>
       <h3>Peak GHG Emissions</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
+      <img src="img/intel1.jpg" alt="Intel Peak GHG Emissions" />
       <p>
         This year marks Intel's highest annual greenhouse gas emissions 
-        for operations. Over subsequent years, Intel invests heavily in 
+       for operations. Over subsequent years, Intel invests heavily in 
         chemical abatement, renewable energy, and energy-efficient 
         manufacturing to reverse this trend.
-      </p>
-    </div>
+     </p>
+   </div>
 
-    <!-- Card 6: 2020 -->
-    <div>
-      <h2>2020</h2>
-      <h3>RISE Strategy</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        Intel launches its RISE (Responsible, Inclusive, Sustainable, 
-        Enabling) strategy and 2030 goals, aiming to drive industry-wide 
-        progress on climate action, water stewardship, and waste reduction.
-      </p>
-    </div>
+     <!-- Card 6: 2020 -->
+       <div>
+  <h2>2020</h2>
+  <h3>RISE Strategy</h3>
+  <img src="img/intel4.jpg" alt="Intel RISE Strategy" />
+  <p>
+    Intel launches its RISE (Responsible, Inclusive, Sustainable, 
+    Enabling) strategy and 2030 goals, aiming to drive industry-wide 
+    progress on climate action, water stewardship, and waste reduction.
+  </p>
+       </div>
 
     <!-- Card 7: 2022 -->
-    <div>
-      <h2>2022</h2>
-      <h3>Net-Zero By 2040</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        Intel announces its commitment to achieve net-zero greenhouse 
-        gas emissions (Scope 1 and 2) across its global operations 
-        by 2040, building on years of environmental initiatives.
-      </p>
-    </div>
+     <div>
+  <h2>2022</h2>
+  <h3>Net-Zero By 2040</h3>
+  <img src="img/intel5.jpg" alt="Intel Net-Zero By 2040" />
+  <p>
+    Intel announces its commitment to achieve net-zero greenhouse 
+    gas emissions (Scope 1 and 2) across its global operations 
+    by 2040, building on years of environmental initiatives.
+  </p>
+     </div>
 
     <!-- Card 8: 2023 -->
-    <div>
-      <h2>2023</h2>
-      <h3>Renewable Electricity</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        The company achieves 99% renewable electricity usage worldwide, 
-        helping to drastically lower carbon emissions and driving progress 
-        toward Intel's long-term sustainability goals.
-      </p>
-    </div>
+      <div>
+  <h2>2023</h2>
+  <h3>Renewable Electricity</h3>
+  <img src="img/intel3.jpg" alt="Intel Renewable Electricity" />
+  <p>
+    The company achieves 99% renewable electricity usage worldwide, 
+    helping to drastically lower carbon emissions and driving progress 
+    toward Intel's long-term sustainability goals.
+  </p>
+      </div>
 
     <!-- Card 9: 2024 -->
     <div>
       <h2>2024</h2>
       <h3>Sustainability Summit</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
+      <img src="img/intel6.jpg" alt="intel Image" />
       <p>
         Intel hosts its first Sustainability Summit, uniting suppliers, 
         government officials, and industry leaders to collaborate on 
@@ -138,6 +149,32 @@
       </p>
     </div>
   </section>
-  <p>Scroll to view timeline | Hover over cards to learn more!</p>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Intel Corporation. All rights reserved.</p>
+    <p><a href="#top">Back to Top</a></p>
+  </footer>
+
+  <!-- Scroll-to-Top Button -->
+  <button id="scrollToTop" onclick="scrollToTop()">↑</button>
+
+  <!-- JavaScript for Scroll-to-Top Button -->
+  <script>
+    // Show the button when the user scrolls down
+    window.onscroll = function () {
+      const button = document.getElementById('scrollToTop');
+      if (document.documentElement.scrollTop > 100) {
+        button.style.display = 'block';
+      } else {
+        button.style.display = 'none';
+      }
+    };
+
+    // Scroll to the top when the button is clicked
+    function scrollToTop() {
+      document.documentElement.scrollTop = 0;
+    }
+  </script>
 </body>
 </html>
