--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Intel: Sustainability Through the Ages</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Intel's Sustainability Timeline</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -20,7 +20,7 @@
   <!-- Header / Hero Section -->
   <header>
     <div>
-      <img src="img/intel-header-logo.svg" alt="Intel Logo" />
+      <img src="img/intel-header-logo.svg" alt="Intel Logo">
       <h1>Sustainability Through the Ages</h1>
       <p>
         Explore Intel's journey through time, discovering how our commitment
@@ -29,10 +29,12 @@
       </p>
     </div>
   </header>
+
   <!-- Additional Image -->
-  <div>
-    <img src="img/intel2.jpg" alt="Intel Image" />
+  <div class="centered-image">
+    <img src="img/intel2.jpg" alt="Intel Image">
   </div>
+
   <!-- Timeline Section Header -->
   <div class="timeline-header">
     <h2>Intel's Sustainability Timeline</h2>
@@ -40,12 +42,11 @@
 
   <!-- Timeline Cards Section -->
   <section id="timeline">
-
-    <!-- Card 1: 1968 -->
-    <div>
+    <!-- Card 1 -->
+    <div class="card">
       <h2>1968</h2>
       <h3>Intel Founded</h3>
-      <img src="img/1.jpg" alt="Placeholder Image" />
+      <img src="img/1.jpg" alt="Intel Founded">
       <p>
         Robert Noyce and Gordon Moore rename the newly formed company 
         NM Electronics to Intel Corporation, laying the foundation for 
@@ -53,20 +54,19 @@
       </p>
     </div>
 
-    <!-- Card 2: 1971 -->
-    <div>
+    <!-- Card 2 -->
+    <div class="card">
       <h2>1971</h2>
       <h3>First Microprocessor</h3>
-      <img src="img/2.jpg" alt="Placeholder Image" />
+      <img src="img/2.jpg" alt="First Microprocessor">
       <p>
-        Intel debuts the 4004, the world's first commercial microprocessor, 
-        igniting the microprocessor revolution and propelling the future 
-        of computing devices.
+        Intel releases the world's first microprocessor, the 4004, 
+        revolutionizing computing technology.
       </p>
     </div>
 
     <!-- Card 3: 1978 -->
-    <div>
+    <div class="card">
       <h2>1978</h2>
       <h3>8086 Processor</h3>
       <img src="img/3.jpg" alt="Placeholder Image" />
@@ -77,7 +77,7 @@
     </div>
 
     <!-- Card 4: 1985 -->
-    <div>
+    <div class="card">
       <h2>1985</h2>
       <h3>386 Processor</h3>
       <img src="img/4.jpg" alt="Placeholder Image" />
@@ -89,7 +89,7 @@
     </div>
   
     <!-- Card 5: 2006 -->
-    <div>
+    <div class="card">
       <h2>2006</h2>
       <h3>Peak GHG Emissions</h3>
       <img src="img/intel1.jpg" alt="Intel Peak GHG Emissions" />
@@ -102,7 +102,7 @@
    </div>
 
      <!-- Card 6: 2020 -->
-       <div>
+       <div class="card">
   <h2>2020</h2>
   <h3>RISE Strategy</h3>
   <img src="img/intel4.jpg" alt="Intel RISE Strategy" />
@@ -114,7 +114,7 @@
        </div>
 
     <!-- Card 7: 2022 -->
-     <div>
+     <div class="card">
   <h2>2022</h2>
   <h3>Net-Zero By 2040</h3>
   <img src="img/intel5.jpg" alt="Intel Net-Zero By 2040" />
@@ -126,7 +126,7 @@
      </div>
 
     <!-- Card 8: 2023 -->
-      <div>
+      <div class="card">
   <h2>2023</h2>
   <h3>Renewable Electricity</h3>
   <img src="img/intel3.jpg" alt="Intel Renewable Electricity" />
@@ -138,7 +138,7 @@
       </div>
 
     <!-- Card 9: 2024 -->
-    <div>
+    <div class="card">
       <h2>2024</h2>
       <h3>Sustainability Summit</h3>
       <img src="img/intel6.jpg" alt="intel Image" />
