--- a/index.html
+++ b/index.html
@@ -1,10 +1,117 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Intel's Sustainability Timeline</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+
+
+    /* High-contrast mode styles */
+    body.high-contrast {
+      background-color: black;
+      color: white;
+    }
+    body.high-contrast a {
+      color: yellow;
+    }
+    body.high-contrast img {
+      filter: brightness(0.8);
+    }
+
+    /* Neutral color palette */
+    :root {
+      --primary-color: #4a4a4a; /* Dark gray for text */
+      --secondary-color: #f5f5f5; /* Light gray for backgrounds */
+      --accent-color: #d1a054; /* Warm gold for highlights */
+      --link-color: #00C7FD; /* Blue for links */
+      --button-bg: #6c757d; /* Neutral gray for buttons */
+      --button-text: #ffffff; /* White for button text */
+    }
+
+    body {
+      background-color: var(--secondary-color);
+      color: var(--primary-color);
+    }
+
+    a {
+      color: var(--link-color);
+    }
+
+    .btn-primary {
+      background-color: #00C7FD; /* Updated button background color */
+      color: var(--button-text);
+      border: none;
+    }
+
+    .btn-primary:hover {
+      background-color: var(--accent-color);
+      color: var(--button-text);
+    }
+
+    header, footer {
+      background-color: var(--primary-color);
+      color: var(--button-text);
+    }
+
+    .timeline-card, .shadow {
+      background-color: var(--secondary-color) ; 
+      border: 1px solid var(--primary-color);
+    }
+
+    .shadow h2 {
+      color: var(--primary-color);
+    }
+
+    /* Center the image on the page */
+    .image-container {
+      text-align: center; /* Align content in the center horizontally */
+      margin-top: 20px; /* Add some space above the image */
+    }
+
+    .image-container img {
+      display: inline-block; /* Ensure the image behaves like a block element */
+      max-width: 100%; /* Make the image responsive */
+      height: auto; /* Maintain the aspect ratio */
+    }
+
+    /* Simplified styles for repeated elements */
+    .timeline-card {
+      padding: 20px;
+      border-radius: 8px;
+      text-align: center;
+    }
+
+    .timeline-card.highlight {
+      background-color: #0068B5;
+      color: white;
+    }
+
+    .timeline-card img {
+      max-width: 100%;
+      height: auto;
+    }
+
+    nav ul {
+      list-style: none; /* Remove bullet points */
+      padding: 0; /* Remove default padding */
+      text-align: center; /* Center the navigation items */
+    }
+
+    nav ul li {
+      display: inline-block; /* Display items inline */
+      margin: 0 10px; /* Add spacing between items */
+    }
+
+    nav ul li a {
+      text-decoration: none; /* Remove underline from links */
+      color: var(--link-color); /* Use the link color from the palette */
+    }
+  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" integrity="sha384-dpuaG1suU0eT09tx5plTaGMLBsfDLzUCCUXOY2j/LSvXYuG6Bqs43ALlhIqAJVRb" crossorigin="anonymous">
+
 </head>
 <body>
 
@@ -20,7 +127,7 @@
   <!-- Header / Hero Section -->
   <header>
     <div>
-      <img src="img/intel-header-logo.svg" alt="Intel Logo">
+      <img src="img/intel-header-logo.svg" alt="Intel logo with a blue background">
       <h1>Sustainability Through the Ages</h1>
       <p>
         Explore Intel's journey through time, discovering how our commitment
@@ -31,129 +138,159 @@
   </header>
 
   <!-- Additional Image -->
-  <div class="centered-image">
+  <div class="image-container">
     <img src="img/intel2.jpg" alt="Intel Image">
   </div>
 
-  <!-- Timeline Section Header -->
-  <div class="timeline-header">
-    <h2>Intel's Sustainability Timeline</h2>
-  </div>
 
   <!-- Timeline Cards Section -->
   <section id="timeline">
-    <!-- Card 1 -->
-    <div class="card">
-      <h2>1968</h2>
-      <h3>Intel Founded</h3>
-      <img src="img/1.jpg" alt="Intel Founded">
-      <p>
-        Robert Noyce and Gordon Moore rename the newly formed company 
-        NM Electronics to Intel Corporation, laying the foundation for 
-        decades of technological innovation.
-      </p>
-    </div>
-
-    <!-- Card 2 -->
-    <div class="card">
-      <h2>1971</h2>
-      <h3>First Microprocessor</h3>
-      <img src="img/2.jpg" alt="First Microprocessor">
-      <p>
-        Intel releases the world's first microprocessor, the 4004, 
-        revolutionizing computing technology.
-      </p>
-    </div>
-
-    <!-- Card 3: 1978 -->
-    <div class="card">
-      <h2>1978</h2>
-      <h3>8086 Processor</h3>
-      <img src="img/3.jpg" alt="Placeholder Image" />
-      <p>
-        Launch of the 8086 processor, establishing the x86 architecture 
-        that drives countless PCs and servers in the modern era.
-      </p>
-    </div>
-
-    <!-- Card 4: 1985 -->
-    <div class="card">
-      <h2>1985</h2>
-      <h3>386 Processor</h3>
-      <img src="img/4.jpg" alt="Placeholder Image" />
-      <p>
-        Intel introduces the 386 processor with 32-bit architecture, 
-        ushering in a new era of performance and multitasking for 
-        personal computers.
-      </p>
-    </div>
-  
-    <!-- Card 5: 2006 -->
-    <div class="card">
-      <h2>2006</h2>
-      <h3>Peak GHG Emissions</h3>
-      <img src="img/intel1.jpg" alt="Intel Peak GHG Emissions" />
-      <p>
-        This year marks Intel's highest annual greenhouse gas emissions 
-       for operations. Over subsequent years, Intel invests heavily in 
-        chemical abatement, renewable energy, and energy-efficient 
-        manufacturing to reverse this trend.
-     </p>
-   </div>
-
-     <!-- Card 6: 2020 -->
-       <div class="card">
-  <h2>2020</h2>
-  <h3>RISE Strategy</h3>
-  <img src="img/intel4.jpg" alt="Intel RISE Strategy" />
-  <p>
-    Intel launches its RISE (Responsible, Inclusive, Sustainable, 
-    Enabling) strategy and 2030 goals, aiming to drive industry-wide 
-    progress on climate action, water stewardship, and waste reduction.
-  </p>
-       </div>
-
-    <!-- Card 7: 2022 -->
-     <div class="card">
-  <h2>2022</h2>
-  <h3>Net-Zero By 2040</h3>
-  <img src="img/intel5.jpg" alt="Intel Net-Zero By 2040" />
-  <p>
-    Intel announces its commitment to achieve net-zero greenhouse 
-    gas emissions (Scope 1 and 2) across its global operations 
-    by 2040, building on years of environmental initiatives.
-  </p>
-     </div>
-
-    <!-- Card 8: 2023 -->
-      <div class="card">
-  <h2>2023</h2>
-  <h3>Renewable Electricity</h3>
-  <img src="img/intel3.jpg" alt="Intel Renewable Electricity" />
-  <p>
-    The company achieves 99% renewable electricity usage worldwide, 
-    helping to drastically lower carbon emissions and driving progress 
-    toward Intel's long-term sustainability goals.
-  </p>
+    <div class="container">
+      <div class="row">
+        <!-- Highlighted Card -->
+        <div class="col-lg-12 col-md-12 col-12 timeline-card highlight" style="background-color: #0068B5;"> 
+            <h1 style="color: white; font-size: 2.8rem; text-align: center; margin-bottom: 20px;">Intel's Sustainability Timeline</h1>
+        </div>
+        
+        <!-- Timeline Cards -->
+        <div class="col-lg-4 col-md-6 col-12 timeline-card">
+          <img src="img/1.jpg" alt="Black and white photo of Robert Noyce and Gordon Moore">
+          <h2>1968</h2>
+          <h3>Intel Founded</h3>
+          <p>Robert Noyce and Gordon Moore rename the newly formed company NM Electronics to Intel Corporation.</p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-12 timeline-card">
+          <img src="img/2.jpg" alt="Close-up of Intel's 4004 microprocessor">
+          <h2>1971</h2>
+          <h3>First Microprocessor</h3>
+          <p>Intel releases the world's first microprocessor, the 4004, revolutionizing computing technology.</p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-12 timeline-card">
+          <img src="img/3.jpg" alt="Intel 8086 processor chip on a circuit board">
+          <h2>1978</h2>
+          <h3>8086 Processor</h3>
+          <p>Launch of the 8086 processor, establishing the x86 architecture that drives countless PCs and servers.</p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-12 timeline-card">
+          <img src="img/4.jpg" alt="Intel 386 processor with visible pins and packaging">
+          <h2>1985</h2>
+          <h3>386 Processor</h3>
+          <p>Intel introduces the 386 processor with 32-bit architecture, ushering in a new era of performance.</p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-12 timeline-card">
+          <img src="img/intel1.jpg" alt="Intel Pentium processor with packaging">
+          <h2>1993</h2>
+          <h3>Pentium Processor</h3>
+          <p>Intel launches the Pentium processor, setting a new standard for performance in personal computing.</p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-12 timeline-card">
+          <img src="img/intel3.jpg" alt="Intel Core processor with modern packaging">
+          <h2>2006</h2>
+          <h3>Core Processor</h3>
+          <p>Intel introduces the Core processor family, delivering improved performance and energy efficiency.</p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-12 timeline-card">
+          <img src="img/intel4.jpg" alt="Intel's 3D transistor technology">
+          <h2>2011</h2>
+          <h3>3D Transistors</h3>
+          <p>Intel unveils 3D transistor technology, revolutionizing chip design and boosting performance.</p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-12 timeline-card">
+          <img src="img/intel5.jpg" alt="Intel's 10nm processor">
+          <h2>2017</h2>
+          <h3>10nm Processors</h3>
+          <p>Intel begins production of 10nm processors, advancing semiconductor manufacturing technology.</p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-12 timeline-card">
+          <img src="img/intel6.jpg" alt="Intel's commitment to sustainability">
+          <h2>2022</h2>
+          <h3>Sustainability Goals</h3>
+          <p>Intel pledges to achieve net-zero greenhouse gas emissions by 2040, reinforcing its commitment to sustainability.</p>
+        </div>
+        <div class="col-lg-12 col-md-12 col-12 timeline-card highlight" style="background-color: #0068B5;">
+        </div>
+        <div class="col-lg-12 col-md-12 col-12 timeline-card highlight" style="background-color: #0068B5;">
+        </div>
       </div>
-
-    <!-- Card 9: 2024 -->
-    <div class="card">
-      <h2>2024</h2>
-      <h3>Sustainability Summit</h3>
-      <img src="img/intel6.jpg" alt="intel Image" />
-      <p>
-        Intel hosts its first Sustainability Summit, uniting suppliers, 
-        government officials, and industry leaders to collaborate on 
-        next-generation sustainable semiconductor manufacturing.
-      </p>
     </div>
   </section>
 
+  <!-- 3-Column Content Section -->
+
+  <section id="sustainability" class="py-5">
+    <div class="container">
+      <div class="row">
+        <!-- Column 1 -->
+        <div class="col-lg-4 col-md-6 col-12 d-flex flex-column justify-content-between p-3 shadow">
+          <h2>RISE Strategy</h2>
+          <p>
+            Under its RISE (Responsible, Inclusive, Sustainable, Enabling) strategy, 
+            Intel sets ambitious 2030 goals, including driving industry-wide 
+            progress on climate action, water stewardship, and waste reduction.
+          </p>
+          <a href="#" class="btn btn-primary mt-auto">Learn More</a>
+        </div>
+        <!-- Column 2 -->
+        <div class="col-lg-4 col-md-6 col-12 d-flex flex-column justify-content-between p-3 shadow">
+          <h2>Commitment</h2>
+          <p>
+            In 2022, Intel pledged to achieve net-zero greenhouse gas emissions 
+            (Scope 1 and 2) by 2040. This commitment builds on decades of 
+            environmental initiatives and partnerships across the semiconductor 
+            industry.
+          </p>
+          <a href="#" class="btn btn-primary mt-auto">Learn More</a>
+        </div>
+        <!-- Column 3 -->
+        <div class="col-lg-4 col-md-6 col-12 d-flex flex-column justify-content-between p-3 shadow">
+          <h2>Water &amp; Waste</h2>
+          <p>
+            Intel conserves billions of gallons of water annually and 
+            collaborates with local communities to restore watersheds.
+            Intel also upcycles and recycles materials to reduce waste and 
+            advance a circular economy.
+          </p>
+          <a href="#" class="btn btn-primary mt-auto">Learn More</a>
+        </div>
+        <!-- Column 4 -->
+        <div class="col-lg-4 col-md-6 col-12 d-flex flex-column justify-content-between p-3 shadow">
+          <h2>Innovation</h2>
+          <p>
+            Intel continues to innovate in energy-efficient technologies, 
+            ensuring that sustainability is at the core of its product design 
+            and manufacturing processes.
+          </p>
+          <a href="#" class="btn btn-primary mt-auto">Learn More</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Subscription Form -->
+  <section class="py-5 bg-white">
+    <div class="container">
+      <h2 class="text-center mb-4">Subscribe to our Newsletter</h2>
+      <form class="row justify-content-center">
+        <div class="col-md-6">
+          <div class="mb-3">
+            <label for="emailInput" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="emailInput" placeholder="name@example.com" required>
+          </div>
+          <button type="submit" class="btn btn-primary w-100">Subscribe</button>
+        </div>
+      </form>
+    </div>
+  </div>
+  </section>
+
   <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Intel Corporation. All rights reserved.</p>
-    <p><a href="#top">Back to Top</a></p>
+  <footer class="py-4 bg-dark text-white text-center">
+    <div class="container">
+      <button id="toggleContrast" class="btn btn-outline-light mb-3" onclick="toggleHighContrast()">Toggle High Contrast</button>
+      <p>&copy; 2025 Intel Corporation. All rights reserved.</p>
+      <p><a href="#top" class="text-white">Back to Top</a></p>
+    </div>
   </footer>
 
   <!-- Scroll-to-Top Button -->
@@ -161,20 +298,27 @@
 
   <!-- JavaScript for Scroll-to-Top Button -->
   <script>
-    // Show the button when the user scrolls down
-    window.onscroll = function () {
-      const button = document.getElementById('scrollToTop');
-      if (document.documentElement.scrollTop > 100) {
-        button.style.display = 'block';
-      } else {
-        button.style.display = 'none';
-      }
+    // Simplified scroll-to-top logic
+    const scrollToTopButton = document.getElementById('scrollToTop');
+    window.onscroll = () => {
+      scrollToTopButton.style.display = document.documentElement.scrollTop > 100 ? 'block' : 'none';
     };
 
-    // Scroll to the top when the button is clicked
     function scrollToTop() {
-      document.documentElement.scrollTop = 0;
+      window.scrollTo({ top: 0, behavior: 'smooth' });
     }
+
+    function toggleHighContrast() {
+      document.body.classList.toggle('high-contrast');
+    }
+
+    // Simplified language direction logic
+    const htmlElement = document.documentElement;
+    const rtlLanguages = ['ar', 'he', 'fa', 'ur'];
+    htmlElement.dir = rtlLanguages.includes(htmlElement.lang) ? 'rtl' : 'ltr';
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js" integrity="sha384-7z4c6j1x2k6v1X9e8
 </body>
 </html>
