--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
+        <ul class="navbar-nav me-auto">
           <li class="nav-item">
             <a class="nav-link" href="#top">Home</a>
           </li>
@@ -231,6 +231,11 @@
     </div>
   </section>
 
+  <!-- Header for Sustainability Goals -->
+  <h2 class="text-center my-4" style="color: white; background-color: #0068B5; padding: 10px; border-radius: 5px;">
+    Sustainability Goals
+  </h2>
+
   <!-- 3-Column Content Section -->
 
   <section id="sustainability" class="py-5">
@@ -327,6 +332,32 @@
       // Toggle the high-contrast class on the body element
       document.body.classList.toggle('high-contrast');
     }
+
+    // Function to check and apply RTL mode based on the page language
+    function applyRTLIfNeeded() {
+      const htmlElement = document.documentElement; // Get the <html> element
+      const currentLang = htmlElement.getAttribute('lang'); // Get the current language
+
+      // Check if the language is a right-to-left language
+      if (['ar', 'he', 'fa', 'ur'].includes(currentLang)) {
+        htmlElement.setAttribute('dir', 'rtl'); // Set the direction to RTL
+        document.body.classList.add('rtl'); // Add an RTL class to the body for additional styling
+      } else {
+        htmlElement.setAttribute('dir', 'ltr'); // Set the direction to LTR
+        document.body.classList.remove('rtl'); // Remove the RTL class if it exists
+      }
+    }
+
+    // Observe changes to the <html> element's attributes (e.g., lang)
+    const observer = new MutationObserver(() => {
+      applyRTLIfNeeded(); // Reapply RTL mode if the language changes
+    });
+
+    // Start observing the <html> element for attribute changes
+    observer.observe(document.documentElement, { attributes: true, attributeFilter: ['lang'] });
+
+    // Initial check when the page loads
+    applyRTLIfNeeded();
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
