Enhance timeline card interactions with opacity transitions for improved visibility on hover and focus

--- a/index.html
+++ b/index.html
@@ -158,66 +158,65 @@
     <img src="img/intel2.jpg" alt="Intel Image">
   </div>
 
-
   <!-- Timeline Cards Section -->
-  <section id="timeline">
+  <section id="timeline" style="margin-top: 40px;"> <!-- Add margin-top for spacing -->
     <div class="container">
-      <div class="row">
+      <div class="row d-flex align-items-stretch">
         <!-- Highlighted Card -->
-        <div class="col-lg-12 col-md-12 col-12 timeline-card highlight text-white text-center" style="background-color: #0068B5;">
+        <div class="col-lg-12 col-md-12 col-12 timeline-card highlight text-white d-flex align-items-center justify-content-center h-100" style="background-color: #0068B5;">
           <h1>Intel's Sustainability Timeline</h1>
         </div>
         
         <!-- Timeline Cards -->
-        <div class="col-lg-4 col-md-6 col-12 timeline-card">
+        <div class="col-lg-4 col-md-6 col-12 timeline-card h-100">
           <img src="img/1.jpg" alt="Black and white photo of Robert Noyce and Gordon Moore">
           <h2>1968</h2>
           <h3>Intel Founded</h3>
           <p>Robert Noyce and Gordon Moore rename the newly formed company NM Electronics to Intel Corporation.</p>
         </div>
-        <div class="col-lg-4 col-md-6 col-12 timeline-card">
+        <div class="col-lg-4 col-md-6 col-12 timeline-card h-100">
           <img src="img/2.jpg" alt="Close-up of Intel's 4004 microprocessor">
           <h2>1971</h2>
           <h3>First Microprocessor</h3>
           <p>Intel releases the world's first microprocessor, the 4004, revolutionizing computing technology.</p>
         </div>
-        <div class="col-lg-4 col-md-6 col-12 timeline-card">
+        <div class="col-lg-4 col-md-6 col-12 timeline-card h-100">
           <img src="img/3.jpg" alt="Intel 8086 processor chip on a circuit board">
           <h2>1978</h2>
           <h3>8086 Processor</h3>
           <p>Launch of the 8086 processor, establishing the x86 architecture that drives countless PCs and servers.</p>
         </div>
-        <div class="col-lg-4 col-md-6 col-12 timeline-card">
+        <div class="col-lg-4 col-md-6 col-12 timeline-card h-100">
           <img src="img/4.jpg" alt="Intel 386 processor with visible pins and packaging">
           <h2>1985</h2>
           <h3>386 Processor</h3>
           <p>Intel introduces the 386 processor with 32-bit architecture, ushering in a new era of performance.</p>
         </div>
-        <div class="col-lg-4 col-md-6 col-12 timeline-card">
+        <div class="col-lg-4 col-md-6 col-12 timeline-card h-100">
           <img src="img/intel1.jpg" alt="Intel Pentium processor with packaging">
           <h2>1993</h2>
           <h3>Pentium Processor</h3>
           <p>Intel launches the Pentium processor, setting a new standard for performance in personal computing.</p>
         </div>
-        <div class="col-lg-4 col-md-6 col-12 timeline-card">
+        <div class="col-lg-4 col-md-6 col-12 timeline-card h-100">
           <img src="img/intel3.jpg" alt="Intel Core processor with modern packaging">
           <h2>2006</h2>
           <h3>Core Processor</h3>
           <p>Intel introduces the Core processor family, delivering improved performance and energy efficiency.</p>
         </div>
-        <div class="col-lg-4 col-md-6 col-12 timeline-card">
+        <div class="col-lg-4 col-md-6 col-12 timeline-card h-100">
           <img src="img/intel4.jpg" alt="Intel's 3D transistor technology">
           <h2>2011</h2>
           <h3>3D Transistors</h3>
           <p>Intel unveils 3D transistor technology, revolutionizing chip design and boosting performance.</p>
         </div>
-        <div class="col-lg-4 col-md-6 col-12 timeline-card">
+        <div class="col-lg-4 col-md-6 col-12 timeline-card h-100">
           <img src="img/intel5.jpg" alt="Intel's 10nm processor">
           <h2>2017</h2>
           <h3>10nm Processors</h3>
           <p>Intel begins production of 10nm processors, advancing semiconductor manufacturing technology.</p>
         </div>
-        <div class="col-lg-4 col-md-6 col-12 timeline-card">
+        <div class="col-lg-4 col-md-6 col-12 timeline-card h-100">
           <img src="img/intel6.jpg" alt="Intel's commitment to sustainability">
           <h2>2022</h2>
           <h3>Sustainability Goals</h3>
